# openradiusweb

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
deploy/: deploy.sh  prometheus.yml
docs/: architecture.md  backup-recovery-troubleshooting.md  deployment-guide.md  deployment-pki-choice.md  design-backup-ui.md  development-manual.md  development-manual.zh.md  employee-wifi-setup-guide.md  migration-features.md  operations-manual.md  release-notes-2026-05-01.md  runbook-backup-cron.md  runbook-key-rotation.md  runbook-post-deploy-verification.md  runbook-rotate-non-master-secrets.md  security-audit-2026-05-02-secret-storage.md  session-2026-04-28-feature-migration.md  session-2026-04-29-migration-completion.md  session-2026-04-30-deployment.md  session-2026-05-02-production-debug-and-mab.md  session-2026-05-03-encryption-rollout.md  troubleshooting-8021x-ad.md
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json
migrations/: 002_settings_radius_features.sql  003_vlans_mab.sql  004_group_vlan_mappings.sql  007_backup_management.sql  (+4 more)
shared/: pyproject.toml
shared/orw_common/: __init__.py  config.py  database.py  db_url_safe.py  exceptions.py  logging.py  nats_client.py  policy_evaluator.py  secrets.py
shared/orw_common/models/: __init__.py  auth.py  backup.py  certificate.py  coa.py  common.py  device.py  group_vlan_mapping.py  ldap_server.py  mab_device.py  nas_client.py  network_device.py  policy.py  radius_realm.py  vlan.py
(+265 files in other folders)
